--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Methode 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,10 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-list>
+  <ion-item *ngFor="let user of users">
+    <ion-label>{{user.name}}</ion-label>
+  </ion-item>
+</ion-list>
+  
 </ion-content>
